--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.13",
     "mongoose": "^8.5.4",
-    "nanoid": "^5.0.7",
+    "nanoid": "^3.3.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "radash": "^12.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
