--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "passport-local": "^1.0.0",
     "radash": "^12.1.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
