--- a/package.json
+++ b/package.json
@@ -28,20 +28,23 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
-    "@nestjs/throttler": "^6.2.1",
+    "@nestjs/throttler": "^3.1.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dayjs": "^1.11.13",
     "mongoose": "^8.5.4",
     "nanoid": "^3.3.7",
+    "nestjs-throttler-storage-redis": "^0.5.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "radash": "^12.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "cache-manager": "^5.3.1",
+    "cache-manager-redis-store": "^2.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
